# calcver-example-rs

./: .calcver.yml  .travis.yml  Cargo.toml  build.rs  readme.md
src/: bin.rs  lib.rs  main.rs
