[package]
authors = ['Jerahmeel Cosinas <me@jerahmeelcosinas.net>']
name = 'calcver-example'
description = 'An example crate'
documentation = 'https://github.com/easy-semver/calcver-example-rs'
license = 'Apache-2.0'
name = 'calcver'
repository = 'https://github.com/easy-semver/calcver-example-rs'
version = '0.0.0'


[lib]
name = 'calcver-example'
path = 'src/lib.rs'

[[bin]]
name = 'calcver-example'
path = 'src/bin.rs'